<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>no.yyz</groupId>
        <artifactId>parent-project</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>hibernate-models</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
<dependencies>
    <dependency>
        <groupId>org.hibernate.orm</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>${yyz.hibernate.version}</version>
        <scope>provided</scope>
    </dependency>
    <!--        <dependency>-->
    <!--            <groupId>org.hibernate.orm</groupId>-->
    <!--            <artifactId>hibernate-community-dialects</artifactId>-->
    <!--            <version>${yyz.hibernate.version}</version>-->
    <!--            <scope>provided</scope>-->
    <!--        </dependency>-->
    <!--        <dependency>-->
    <!--            <groupId>org.hibernate.orm</groupId>-->
    <!--            <artifactId>hibernate-core</artifactId>-->
    <!--            <version>${yyz.hibernate.version}</version>-->
    <!--            <scope>compile</scope>-->
    <!--        </dependency>-->
    <dependency>
        <groupId>org.hibernate.orm</groupId>
        <artifactId>hibernate-community-dialects</artifactId>
        <version>${yyz.hibernate.version}</version>
    </dependency>
    <!--        <dependency>-->
    <!--            <groupId>org.hibernate.common</groupId>-->
    <!--            <artifactId>hibernate-commons-annotations</artifactId>-->
    <!--            <version>7.0.3.Final</version>-->
    <!--            <scope>provided</scope>-->
    <!--        </dependency>-->

</dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>